Misc page: update image list (add JuicyCD, remove badguy_gif and video), content system, reduce card size
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
           <nav class="nav">
             <a class="nav-link nav-active" href="./index.html">Work</a>
             <a class="nav-link" href="info.html">Info</a>
+            <a class="nav-link" href="misc.html">Misc.</a>
           </nav>
         </div>
       </div>
-      <p class="header-intro scroll-in">
-        Maj is a senior designer based in Brooklyn, NY. They specialize in
-        designing brand systems that translate seamlessly into digital
-        experiences. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.
-      </p>
+      <p class="header-intro scroll-in" data-content-html="headerIntro">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
 
       <main class="page-main">
         <section id="projects" class="section projects-section">
@@ -48,21 +45,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Wordibly</h3>
+                  <h3 class="project-title" data-content="projects.0.title">Wordibly</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.0.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Brand, Product, Web Design, Design System, Illustration, Motion,</p>
+                    <p class="project-detail-value" data-content="projects.0.contributions">Brand, Product, Web Design, Design System, Illustration, Motion,</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Wordibly is a platform that offers both AI and human transcription services. We built the brand from the ground up (aside from their logo mark) and incorporated the new visual identity into the marketing website and the product, focusing on establishing a friendly, human look and feel.</p>
+                  <p class="project-about-text" data-content="projects.0.about">Wordibly is a platform that offers both AI and human transcription services. We built the brand from the ground up (aside from their logo mark) and incorporated the new visual identity into the marketing website and the product, focusing on establishing a friendly, human look and feel.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -88,21 +85,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Cotulla</h3>
+                  <h3 class="project-title" data-content="projects.1.title">Cotulla</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.1.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Branding, UI/UX</p>
+                    <p class="project-detail-value" data-content="projects.1.contributions">Branding, UI/UX</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Cotulla is a cloud-based platform for oil &amp; gas operators, offering advanced analytics and data visualization capabilities to optimize production and improve operational efficiency.</p>
+                  <p class="project-about-text" data-content="projects.1.about">Cotulla is a cloud-based platform for oil &amp; gas operators, offering advanced analytics and data visualization capabilities to optimize production and improve operational efficiency.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -120,21 +117,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Aviation.edu</h3>
+                  <h3 class="project-title" data-content="projects.2.title">Aviation.edu</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.2.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Digital product &amp; brand strategy</p>
+                    <p class="project-detail-value" data-content="projects.2.contributions">Digital product &amp; brand strategy</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Aviation.edu is an online learning platform dedicated to providing comprehensive resources and courses for aspiring pilots and aviation enthusiasts, covering everything from flight theory to aircraft maintenance.</p>
+                  <p class="project-about-text" data-content="projects.2.about">Aviation.edu is an online learning platform dedicated to providing comprehensive resources and courses for aspiring pilots and aviation enthusiasts, covering everything from flight theory to aircraft maintenance.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -155,21 +152,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Somatic Living</h3>
+                  <h3 class="project-title" data-content="projects.3.title">Somatic Living</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.3.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Brand Toolkit</p>
+                    <p class="project-detail-value" data-content="projects.3.contributions">Brand Toolkit</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Somatic Living is a wellness brand focused on holistic health practices, offering resources and guidance for mindfulness, movement, and emotional well-being to help individuals achieve greater self-awareness and inner harmony.</p>
+                  <p class="project-about-text" data-content="projects.3.about">Somatic Living is a wellness brand focused on holistic health practices, offering resources and guidance for mindfulness, movement, and emotional well-being to help individuals achieve greater self-awareness and inner harmony.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -188,21 +185,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Fastly</h3>
+                  <h3 class="project-title" data-content="projects.4.title">Fastly</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.4.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Brand &amp; UI/UX Design System</p>
+                    <p class="project-detail-value" data-content="projects.4.contributions">Brand &amp; UI/UX Design System</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Fastly is a high-performance cloud platform that provides edge cloud services, including CDN, security, and streaming, designed to accelerate and protect websites and applications. The platform helps businesses deliver exceptional digital experiences to their global audiences.</p>
+                  <p class="project-about-text" data-content="projects.4.about">Fastly is a high-performance cloud platform that provides edge cloud services, including CDN, security, and streaming, designed to accelerate and protect websites and applications. The platform helps businesses deliver exceptional digital experiences to their global audiences.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -225,21 +222,21 @@
             <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
-                  <h3 class="project-title">Bloom</h3>
+                  <h3 class="project-title" data-content="projects.5.title">Bloom</h3>
                 </div>
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
+                    <p class="project-detail-value" data-content="projects.5.role">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value">Brand &amp; website design</p>
+                    <p class="project-detail-value" data-content="projects.5.contributions">Brand &amp; website design</p>
                   </div>
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text">Bloom is an application designed to foster personal growth and well-being, offering guided meditations, journaling prompts, and habit tracking to help users cultivate positive routines and achieve their personal goals. It emphasizes a gentle and supportive approach to self-improvement.</p>
+                  <p class="project-about-text" data-content="projects.5.about">Bloom is an application designed to foster personal growth and well-being, offering guided meditations, journaling prompts, and habit tracking to help users cultivate positive routines and achieve their personal goals. It emphasizes a gentle and supportive approach to self-improvement.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
@@ -392,5 +389,6 @@
         document.querySelectorAll(".project-media").forEach(dragScroll);
       })();
     </script>
+    <script src="content-loader.js"></script>
   </body>
 </html>
