Misc: update image list (remove tnb, Untitled_Artwork 2), intro copy, card size and timing
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </nav>
         </div>
       </div>
-      <p class="header-intro scroll-in" data-content-html="headerIntro">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
+      <p class="header-intro scroll-in" data-content-html="headerIntro">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is a work in progress being built with Cursor, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
 
       <main class="page-main">
         <section id="projects" class="section projects-section">
