--- a/info.html
+++ b/info.html
@@ -36,7 +36,7 @@
           </nav>
         </div>
       </div>
-      <p class="header-intro scroll-in" data-content-html="headerIntroInfo">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This site is currently under construction. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
+      <p class="header-intro scroll-in" data-content-html="headerIntroInfo">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is a work in progress being built with Cursor, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
 
       <main class="page-main info-page">
         <div class="info-row scroll-in">
