--- a/misc.html
+++ b/misc.html
@@ -119,13 +119,15 @@
         var DEFAULT_COUNT = 14;
         var DELAY_MS = 1120;
         var MISC_IMAGES = [
-          "assets/misc/2CHA_UKNOW_1.gif",
+          "assets/misc/2CHA_UKNOW_1smalol.gif",
           "assets/misc/AdamArtwork_final%28ish%29.png",
+          "assets/misc/Animation%20Base.gif",
           "assets/misc/alicegas.png",
           "assets/misc/Artboard%2016-100.jpg",
-          "assets/misc/Artboard%203%20copy-100.jpg",
           "assets/misc/Artboard%208-100.jpg",
           "assets/misc/bananabread_color%20more%20noise.png",
+          "assets/misc/Connectors%20colorful6.jpg",
+          "assets/misc/cover.png",
           "assets/misc/crap-100.jpg",
           "assets/misc/cyberunderground.png",
           "assets/misc/fairy2.png",
@@ -142,17 +144,17 @@
           "assets/misc/pixmonshading.png",
           "assets/misc/scroll-stopping-creative.gif",
           "assets/misc/Screen%20Shot%202020-05-03%20at%208.04.58%20PM.png",
-          "assets/misc/tamagotchi.gif",
-          "assets/misc/Untitled_Artwork.gif",
-          "assets/misc/y2kbabyc4d2.png"
+          "assets/misc/slack_5.mp4",
+          "assets/misc/stickersanimate_small.gif",
+          "assets/misc/Untitled_Artwork.gif"
         ];
         var playground = document.getElementById("misc-playground");
         var topZ = 1;
         var dragTarget = null;
         var dragOffsetX = 0;
         var dragOffsetY = 0;
-        var dragCardW = 312;
-        var dragCardH = 312;
+        var dragCardW = 374;
+        var dragCardH = 374;
 
         function getViewportBounds() {
           return { width: window.innerWidth, height: window.innerHeight };
@@ -164,8 +166,8 @@
 
         function placePaper(paper) {
           var b = getViewportBounds();
-          var cardW = 312;
-          var cardH = 312;
+          var cardW = 374;
+          var cardH = 374;
           var pad = 40;
           var x = pad + randomIn(0, Math.max(0, b.width - cardW - pad * 2));
           var y = pad + randomIn(0, Math.max(0, b.height - cardH - pad * 2));
