--- a/info.html
+++ b/info.html
@@ -72,7 +72,7 @@
           <h2 class="info-row-heading">Select Clients</h2>
           <p class="info-row-content" data-content="info.clients">
             Rockefeller Center / Box / Quinn / Microsoft / Amazon / Fusion / Salesforce /
-            Fastly / VMWare / Zillow / Seattle Interactive Conference
+            Fastly / VMWare / Zillow / Seattle Interactive Conference / Wordibly
           </p>
         </div>
 
