Sync misc images: remove deleted assets from lists, add GIF optimization to script
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.1.contributions">Branding, UI/UX</p>
+                    <p class="project-detail-value" data-content="projects.1.contributions">Brand &amp; Web Design, Design System</p>
                   </div>
                 </div>
                 <div class="project-about">
@@ -126,7 +126,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.2.contributions">Digital product &amp; brand strategy</p>
+                    <p class="project-detail-value" data-content="projects.2.contributions">Brand &amp; Website Design, Design System</p>
                   </div>
                 </div>
                 <div class="project-about">
@@ -161,7 +161,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.3.contributions">Brand Toolkit</p>
+                    <p class="project-detail-value" data-content="projects.3.contributions">Brand, Website &amp; Product Design, Design System</p>
                   </div>
                 </div>
                 <div class="project-about">
@@ -194,7 +194,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.4.contributions">Brand &amp; UI/UX Design System</p>
+                    <p class="project-detail-value" data-content="projects.4.contributions">Brand &amp; Web Design, Design System</p>
                   </div>
                 </div>
                 <div class="project-about">
@@ -231,7 +231,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.5.contributions">Brand &amp; website design</p>
+                    <p class="project-detail-value" data-content="projects.5.contributions">Brand &amp; Product Design</p>
                   </div>
                 </div>
                 <div class="project-about">
