Misc: new images (figure, flowers, paitning), lottery.mp4; remove old screenshots; sync lists
Made-with: Cursor

--- a/misc.html
+++ b/misc.html
@@ -144,21 +144,23 @@
           "assets/misc/cyberunderground.png",
           "assets/misc/fairy2.png",
           "assets/misc/fairymonster.gif",
+          "assets/misc/figure%20drawing.png",
+          "assets/misc/figure2.png",
+          "assets/misc/figure6.png",
+          "assets/misc/flowers.png",
           "assets/misc/frogfighter.gif",
-          "assets/misc/Illustration2.png",
-          "assets/misc/Illustration5.jpg",
           "assets/misc/illo.png",
           "assets/misc/illo2.png",
+          "assets/misc/Illustration2.png",
+          "assets/misc/Illustration5.jpg",
           "assets/misc/jetset%20radio%20girl_Cleanup6.png",
           "assets/misc/JuicyCD.png",
-          "assets/misc/lottery.gif",
+          "assets/misc/lottery.mp4",
           "assets/misc/me.png",
+          "assets/misc/paitning.png",
           "assets/misc/pixmonshading.png",
           "assets/misc/scroll-stopping-creative.gif",
           "assets/misc/Screen%20Shot%202020-05-03%20at%208.04.58%20PM.png",
-          "assets/misc/Screenshot%202026-03-01%20at%203.17.42%20PM.png",
-          "assets/misc/Screenshot%202026-03-01%20at%203.17.51%20PM.png",
-          "assets/misc/Screenshot%202026-03-01%20at%203.18.22%20PM.png",
           "assets/misc/slack_5.mp4",
           "assets/misc/stickersanimate_small.gif",
           "assets/misc/Untitled_Artwork.gif"
